--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pydantic==2.11.4
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-multipart==0.0.9
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
